# hw-07

./: .gitignore  LICENSE  README.md  goal.txt  setup.cfg  test.py
clean_folder_jen/: __init__.py  clean.py
src/clean_folder_jen/: clean.py
