[metadata]
name = clean_folder_jen
author = D.L
version = 1.0.0
url = https://github.com/Dimzilla/hw-07
description = My package description
long_description =  README.md, LICENSE
license = MIT license
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
pytho_requires = >=3.3